# amr-travelobot

./: .gitignore  .gitmodules  README.md  amr_launch.sh
ros_ws/: amr_launch.sh
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/bno055/share/bno055/: package.sh
ros_ws/install/diffbot_description/share/diffbot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  package.sh  (+2 more)
ros_ws/log/: latest_build
ros_ws/src/arobot_bringup/launch/: arobot.launch.py
ros_ws/src/foxy_description/: CMakeLists.txt  package.xml
ros_ws/src/foxy_description/config/: ekf.yaml
ros_ws/src/foxy_description/launch/: fixing.py  omo_r1mini_launch.py  world.launch.py
ros_ws/src/foxy_description/mesh/: caster_wheel.stl
ros_ws/src/foxy_description/urdf/: omo.urdf  original.urdf
ros_ws/src/foxy_description/world/: world12.sdf
ros_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/src/log/: latest_build
ros_ws/src/omo_bringup/: CMakeLists.txt  package.xml
ros_ws/src/omo_bringup/launch/: omo_bringup.launch.py  online_async_launch.py  skip_launch.xml
ros_ws/src/omo_bringup/param/: omo_r1mini_lidar.yaml
ros_ws/src/omo_cartographer/: CMakeLists.txt  package.xml
ros_ws/src/omo_cartographer/config/: omo_lidar.lua
ros_ws/src/omo_cartographer/launch/: cartographer.launch.py  cartographer_rviz.launch.py
ros_ws/src/omo_navigation2/: CMakeLists.txt  package.xml
ros_ws/src/omo_navigation2/launch/: navigation2.launch.py
ros_ws/src/omo_navigation2/map/: map12.pgm  map12.yaml
ros_ws/src/omo_navigation2/param/: omo_amcl.yaml
(+220 files in other folders)
